@@ -87,5 +87,9 @@ Text with Java types <a href="http://--wiki/Eclipse:/TEST_PROJECT_NAME/com/teami
 </p>
 <p>
 <a href="http://--wiki/TwikiBrowserContentRendererTest">TwikiBrowserContentRendererTest</a> links and <a href="http://--wiki/TwikiBrowserContentRendererTest">TwikiBrowserContentRendererTest</a></p>
+<p>
+</p>
+<p>
+Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (<a href="http://www.google.com">http://www.google.com</a>).</p>
   </body>
 </html>
