@@ -29,3 +29,5 @@ WardsBrowserContentRendererTest''''''s plural
 http://www.google.com/images/logo.gif
 
 Text with Java types com.teaminabox.foo.BigClass and an inner class com.teaminabox.foo.BigClass.InnerClass
+
+Bug: [ 1490342 ] URL in brackets detected incorrectly: I am sure you have heard of Google (http://www.google.com).
